@@ -11,7 +11,7 @@ cups_autoconfig_LDFLAGS = $(GLIB_LIBS) $(DBUS_LIBS) $(HAL_LIBS)-lcups
 cups_autoconfig_CFLAGS = $(AM_CFLAGS) $(WARNING_FLAGS) $(PROG_CFLAGS) $(GLIB_CFLAGS) $(DBUS_CFLAGS) $(HAL_CFLAGS)
 
 install-data-hook:
-	mkdir $(DESTDIR)/$(libdir)/hal
+	mkdir -p $(DESTDIR)/$(libdir)/hal
 	ln -sf $(libdir)/cups-autoconfig/cups-autoconfig $(DESTDIR)$(libdir)/hal/hal-cups-autoconfig
 
 CLEANFILES = $(sbin_PROGRAMS)
